--- a/ChatSystem.Services/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
+++ b/ChatSystem.Services/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
@@ -1,9 +1,10 @@
+@using System
 @using System.Web.Http
 @using System.Web.Http.Controllers
 @using System.Web.Http.Description
 @using ChatSystem.Services.Areas.HelpPage
 @using ChatSystem.Services.Areas.HelpPage.Models
-@model IGrouping<HttpControllerDescriptor, ApiDescription>
+@model System.Linq.IGrouping<HttpControllerDescriptor, ApiDescription>
 
 @{
     var controllerDocumentation = ViewBag.DocumentationProvider != null ? 
