--- a/ChatUI/templates/user-page.html
+++ b/ChatUI/templates/user-page.html
@@ -1,10 +1,21 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-3 col-md-offset-1">
-
+        <div  class="col-lg-4">
+            <div class="row container-fluid">
+                <div class="padding5 table-bordered">
+                    <ul class="nav nav-pills">
+                        <li id="friends" class="active"><a href="#">Friends <span class="badge">42</span></a></li>
+                        <li id="groups"><a href="#">Chat Groups <span class="badge">3</span></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row container-fluid">
+                <ul id="friends-and-groups" class="list-group">
+                </ul>
+            </div>
         </div>
-        <div class="col-md-7">
-            <dir class="row container-fluid table-bordered padding5">
+        <div class="col-lg-7">
+            <div class="row container-fluid table-bordered padding5">
                 <div class="col-lg-6">
                     <ul class="nav nav-pills">
                         <li class="active"><a href="#">Add friend</a></li>
@@ -16,15 +27,15 @@
                         <li class="active"><a id="logout-button" href="#/">Logout</a></li>
                     </ul>
                 </div>
-            </dir>
+            </div>
 
             <div class="row container-fluid table-bordered">
-                <dir class="row padding5 border-bottom">
+                <div class="row padding5 border-bottom">
                     <div class="col-lg-11 padding5">
                         Friends Name / Group Name
                     </div>
                     <div class="col-lg-1 text-center text-size-200-percent">+</div>
-                </dir>
+                </div>
                 <div class="row">
                     <form class="form-horizontal">
                         <fieldset>
