create new group, show groups

--- a/ChatUI/templates/friends-and-groups.html
+++ b/ChatUI/templates/friends-and-groups.html
@@ -1,6 +1,6 @@
 {{#items}}
-<li id="{{groupId}}" class="list-group-item">
-    <span class="badge">{{#hasMessages}}{{countOfUnrecivedMessages}}{{/hasMessages}}</span>
-    <a>{{name}}</a>
+<li id="{{GroupId}}" class="list-group-item">
+    <span class="badge">{{#hasMessages}}{{UnrecivedMessages}}{{/hasMessages}}</span>
+    <a class="cursor-pointer">{{Name}}</a>
 </li>
 {{/items}}
