--- a/ChatUI/templates/user-page.html
+++ b/ChatUI/templates/user-page.html
@@ -4,8 +4,15 @@
             <div class="row container-fluid">
                 <div class="padding5 table-bordered">
                     <ul class="nav nav-pills">
-                        <li id="friends" class="active"><a href="#">Friends <span class="badge">42</span></a></li>
-                        <li id="groups"><a href="#">Chat Groups <span class="badge">3</span></a></li>
+                        <li id="friends" class="active">
+                            <a class="btn btn-lg" >
+                                Friends <span class="badge">42</span>
+                            </a></li>
+                        <li id="groups">
+                            <a class="btn btn-lg">
+                                Chat Groups <span class="badge">3</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -18,27 +25,35 @@
             <div class="row container-fluid table-bordered padding5">
                 <div class="col-lg-6">
                     <ul class="nav nav-pills">
-                        <li class="active"><a href="#">Add friend</a></li>
-                        <li class="active"><a href="#">Create group</a></li>
+                        <li class="active" >
+                            <a id="add-friend" class="btn btn-lg" data-toggle="modal" data-target="#modal">
+                                Add friend
+                            </a>
+                        </li>
+                        <li class="active">
+                            <a id="create-group" class="btn btn-lg" data-toggle="modal" data-target="#modal">
+                                Create group
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-lg-1 col-lg-offset-4">
                     <ul class="nav nav-pills">
-                        <li class="active"><a id="logout-button" href="#/">Logout</a></li>
+                        <li class="active"><a id="logout-button" class="btn btn-lg">Logout</a></li>
                     </ul>
                 </div>
             </div>
 
             <div class="row container-fluid table-bordered">
                 <div class="row padding5 border-bottom">
-                    <div class="col-lg-11 padding5">
+                    <div id="reciver-name" class="col-lg-11 padding5">
                         Friends Name / Group Name
                     </div>
-                    <div class="col-lg-1 text-center text-size-200-percent">+</div>
+                    <div id="add-friend-in-group" class="col-lg-1 text-center text-size-200-percent">+</div>
                 </div>
                 <div class="row">
                     <form class="form-horizontal">
-                        <fieldset>
+                        <fieldset class="padding5">
                             <div class="form-group">
                                 <div class="col-lg-9 col-lg-offset-1">
                                     <textarea class="form-control" rows="4" id="inputMessage"
@@ -54,4 +69,10 @@
             </div>
         </div>
     </div>
+</div>
+<div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+    <div id="modal-content" class="modal-content">
+    </div>
+</div>
 </div>
