--- a/ChatUI/templates/user-page.html
+++ b/ChatUI/templates/user-page.html
@@ -60,11 +60,14 @@
                                               placeholder="Input message"></textarea>
                                 </div>
                                 <div class="col-lg-1">
-                                    <button type="submit" class="btn btn-primary">Send</button>
+                                    <button id="sent-button" class="btn btn-primary">Send</button>
                                 </div>
                             </div>
                         </fieldset>
                     </form>
+                    <div id="messages" class="container-fluid padding5">
+
+                    </div>
                 </div>
             </div>
         </div>
