--- a/ChatUI/templates/register-form.html
+++ b/ChatUI/templates/register-form.html
@@ -35,7 +35,7 @@
                     </div>
                     <div class="col-lg-6 col-lg-offset-6">
                         <a href="#/" class="btn btn-default">Cancel</a>
-                        <button id="register-button" class="btn btn-primary">Register</button>
+                        <a id="register-button" class="btn btn-primary">Register</a>
                     </div>
                 </div>
             </fieldset>
