--- a/ChatUI/templates/login-form.html
+++ b/ChatUI/templates/login-form.html
@@ -20,7 +20,7 @@
                     </div>
                     <div class="col-lg-6 col-lg-offset-6">
                         <a href="#/" class="btn btn-default">Cancel</a>
-                        <button id="login-button" class="btn btn-primary">Login</button>
+                        <a id="login-button" class="btn btn-primary">Login</a>
                     </div>
                 </div>
             </fieldset>
