--- a/ChatUI/templates/user-page.html
+++ b/ChatUI/templates/user-page.html
@@ -1,11 +1,11 @@
 <div class="container-fluid">
     <div class="row">
-        <div  class="col-lg-4">
+        <div class="col-lg-4">
             <div class="row container-fluid">
                 <div class="padding5 table-bordered">
                     <ul class="nav nav-pills">
                         <li id="friends" class="active">
-                            <a class="btn btn-lg" >
+                            <a class="btn btn-lg">
                                 Friends <span class="badge">42</span>
                             </a></li>
                         <li id="groups">
@@ -25,7 +25,7 @@
             <div class="row container-fluid table-bordered padding5">
                 <div class="col-lg-6">
                     <ul class="nav nav-pills">
-                        <li class="active" >
+                        <li class="active">
                             <a id="add-friend" class="btn btn-lg" data-toggle="modal" data-target="#modal">
                                 Add friend
                             </a>
@@ -44,27 +44,26 @@
                 </div>
             </div>
 
-            <div class="row container-fluid table-bordered">
+            <div id="chat-window" class="row container-fluid table-bordered hide">
                 <div class="row padding5 border-bottom">
                     <div id="reciver-name" class="col-lg-11 padding5">
                         Friends Name / Group Name
                     </div>
-                    <div id="add-friend-in-group" class="col-lg-1 text-center text-size-200-percent">+</div>
+                    <div id="add-friend-in-group" class="col-lg-1 text-center text-size-200-percent cursor-pointer"
+                         data-toggle="modal" data-target="#modal">+</div>
                 </div>
                 <div class="row">
-                    <form class="form-horizontal">
-                        <fieldset class="padding5">
-                            <div class="form-group">
-                                <div class="col-lg-9 col-lg-offset-1">
-                                    <textarea class="form-control" rows="4" id="inputMessage"
-                                              placeholder="Input message"></textarea>
-                                </div>
-                                <div class="col-lg-1">
-                                    <button id="sent-button" class="btn btn-primary">Send</button>
-                                </div>
+                    <fieldset class="padding5">
+                        <div class="form-group">
+                            <div class="col-lg-9 col-lg-offset-1">
+                                <textarea class="form-control" rows="4" id="inputMessage"
+                                          placeholder="Input message"></textarea>
                             </div>
-                        </fieldset>
-                    </form>
+                            <div class="col-lg-1">
+                                <button id="sent-button" class="btn btn-primary">Send</button>
+                            </div>
+                        </div>
+                    </fieldset>
                     <div id="messages" class="container-fluid padding5">
 
                     </div>
@@ -75,7 +74,7 @@
 </div>
 <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
-    <div id="modal-content" class="modal-content">
+        <div id="modal-content" class="modal-content">
+        </div>
     </div>
-</div>
 </div>
