added Plamen files, UI - Added user in group

--- a/ChatUI/templates/user-page.html
+++ b/ChatUI/templates/user-page.html
@@ -47,7 +47,7 @@
             <div id="chat-window" class="row container-fluid table-bordered hide">
                 <div class="row padding5 border-bottom">
                     <div id="reciver-name" class="col-lg-11 padding5">
-                        Friends Name / Group Name
+                        <span id="name">Friends Name / Group Name</span><span id="users"></span>
                     </div>
                     <div id="add-friend-in-group" class="col-lg-1 text-center text-size-200-percent cursor-pointer"
                          data-toggle="modal" data-target="#modal">+</div>
